Sometimes the normal UI font is larger (eg. Hindi text). This code will ensure the Bookmark bar takes this into account and makes the height accommodate it. This eliminates painting artifacts when the Omnibox suggestions dropdown is displayed.

BUG=622678

Review-Url: https://codereview.chromium.org/2208973003
Cr-Commit-Position: refs/heads/master@{#417113}

Former-commit-id: 510b6ef721d3b695d5b11dac659d09e5cbc13a5f